<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SignInFragment">

    <!-- 로그인 화면 -->
    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tv_login_title,tf_login_id,tf_login_password,btn_login_submit,tv_login_register_label,btn_login_register" />

    <TextView
        android:id="@+id/tv_login_title"
        style="@style/AppTextLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_login_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/selector_background_text_field"
            android:hint="@string/hint_id"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@id/tf_login_id"
        app:layout_constraintStart_toStartOf="@id/tf_login_id"
        app:layout_constraintTop_toBottomOf="@id/tf_login_id">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/selector_background_text_field"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login_submit"
        style="@style/AppLoginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_login_password" />

    <TextView
        android:id="@+id/tv_login_register_label"
        style="@style/AppTextLabel.Gray400"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/text_register_guide"
        app:layout_constraintEnd_toStartOf="@id/btn_login_register"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/btn_login_submit"
        app:layout_constraintTop_toBottomOf="@id/btn_login_submit" />

    <Button
        android:id="@+id/btn_login_register"
        style="@style/AppTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_register"
        app:layout_constraintBottom_toBottomOf="@id/tv_login_register_label"
        app:layout_constraintEnd_toEndOf="@id/btn_login_submit"
        app:layout_constraintStart_toEndOf="@id/tv_login_register_label"
        app:layout_constraintTop_toTopOf="@id/tv_login_register_label" />

    <!-- 로그인 후 화면 -->
    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="btn_account_delete,btn_account_logout,iv_account_auth_image,tv_account_auth_label" />

    <Button
        android:id="@+id/btn_account_delete"
        style="@style/AppTextButton.DeleteAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/button_delete_account"
        app:layout_constraintBottom_toBottomOf="@id/btn_account_logout"
        app:layout_constraintEnd_toStartOf="@id/btn_account_logout"
        app:layout_constraintTop_toTopOf="@id/btn_account_logout" />

    <Button
        android:id="@+id/btn_account_logout"
        style="@style/AppTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/button_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_account_auth_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_authentication"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/tv_account_auth_label"
        style="@style/AppTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/text_login_success"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_account_auth_image" />

</androidx.constraintlayout.widget.ConstraintLayout>