<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:overScrollMode="never"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_add_product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="상품 등록"
            app:titleTextAppearance="@style/AppTextTitle" />

        <TextView
            android:id="@+id/tv_product_name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_product_name"
            android:textColor="@color/gray_800"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_add_product" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@android:color/transparent"
            app:endIconMode="clear_text"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@id/tv_product_name_label"
            app:layout_constraintStart_toStartOf="@id/tv_product_name_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_product_name_label">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/selector_background_text_field"
                android:hint="@string/hint_product_name_text"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_add_product_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:constraint_referenced_ids="view_add_product_image, iv_product_add_image, tv_product_add_description" />

        <View
            android:id="@+id/view_add_product_image"
            android:layout_width="0dp"
            android:layout_height="92dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_gray100"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tf_product_name" />

        <ImageView
            android:id="@+id/iv_product_add_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="@id/view_add_product_image"
            app:layout_constraintEnd_toEndOf="@id/view_add_product_image"
            app:layout_constraintStart_toStartOf="@id/view_add_product_image"
            app:layout_constraintTop_toTopOf="@id/view_add_product_image"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/tv_product_add_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/label_product_add_description"
            android:textColor="@color/gray_500"
            app:layout_constraintEnd_toEndOf="@id/view_add_product_image"
            app:layout_constraintStart_toStartOf="@id/view_add_product_image"
            app:layout_constraintTop_toBottomOf="@id/iv_product_add_image" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_add_more_product_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="iv_add_product_image_view,iv_add_product_image_plus, rv_product_image_list" />

        <ImageView
            android:id="@+id/iv_add_product_image_view"
            android:layout_width="92dp"
            android:layout_height="0dp"
            android:background="@drawable/background_stroke_gray200"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/view_add_product_image"
            app:layout_constraintStart_toStartOf="@id/view_add_product_image"
            app:layout_constraintTop_toTopOf="@id/view_add_product_image" />

        <ImageView
            android:id="@+id/iv_add_product_image_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/iv_add_product_image_view"
            app:layout_constraintEnd_toEndOf="@+id/iv_add_product_image_view"
            app:layout_constraintStart_toStartOf="@+id/iv_add_product_image_view"
            app:layout_constraintTop_toTopOf="@+id/iv_add_product_image_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_product_image_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            android:orientation="horizontal"
            android:visibility="invisible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="@id/view_add_product_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_add_product_image_view"
            app:layout_constraintTop_toTopOf="@id/view_add_product_image"
            tools:listitem="@layout/item_product_image" />

        <TextView
            android:id="@+id/tv_product_description_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="6dp"
            android:text="@string/label_product_description"
            android:textColor="@color/gray_800"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_add_product_image" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_product_description"
            android:layout_width="0dp"
            android:layout_height="170dp"
            android:layout_marginTop="6dp"
            android:background="@android:color/transparent"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@id/tv_product_description_label"
            app:layout_constraintStart_toStartOf="@id/tv_product_description_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_product_description_label">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/selector_background_text_field"
                android:gravity="top"
                android:hint="@string/hint_product_description_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_product_price_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="4dp"
            android:text="@string/label_product_price"
            android:textColor="@color/gray_800"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/tv_product_stock_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tf_product_description" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_product_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@android:color/transparent"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@id/tv_product_price_label"
            app:layout_constraintStart_toStartOf="@id/tv_product_price_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_product_price_label">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/selector_background_text_field"
                android:hint="@string/label_product_price"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_product_stock_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:text="@string/label_product_stock"
            android:textColor="@color/gray_800"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_product_price_label"
            app:layout_constraintTop_toBottomOf="@id/tf_product_description" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_product_stock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@android:color/transparent"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@id/tv_product_stock_label"
            app:layout_constraintStart_toStartOf="@id/tv_product_stock_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_product_stock_label">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/selector_background_text_field"
                android:hint="@string/hint_product_stock_text"
                android:inputType="number"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_product_category_type_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="6dp"
            android:text="@string/label_product_type"
            android:textColor="@color/gray_800"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tf_product_stock" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_product_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            app:layout_constraintEnd_toEndOf="@id/tv_product_category_type_label"
            app:layout_constraintStart_toStartOf="@id/tv_product_category_type_label"
            app:layout_constraintTop_toBottomOf="@id/tv_product_category_type_label"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/product_type_disney"
                style="@style/AppChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_disney" />

            <com.google.android.material.chip.Chip
                android:id="@+id/product_type_pixar"
                style="@style/AppChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_pixar" />

            <com.google.android.material.chip.Chip
                android:id="@+id/product_type_marvel"
                style="@style/AppChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_marvel" />

            <com.google.android.material.chip.Chip
                android:id="@+id/product_type_harry_potter"
                style="@style/AppChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chip_harry_potter" />
        </com.google.android.material.chip.ChipGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_product_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/selector_background_button"
            android:text="@string/button_product_add_text"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cg_product_type" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>